@@ -10,7 +10,9 @@ import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
+import com.fasterxml.jackson.databind.MappingIterator;
 import gov.cdc.usds.simplereport.api.BaseAuthenticatedFullStackTest;
+import gov.cdc.usds.simplereport.api.model.filerow.PatientUploadRow;
 import gov.cdc.usds.simplereport.db.model.Facility;
 import gov.cdc.usds.simplereport.db.model.Person;
 import gov.cdc.usds.simplereport.db.model.PhoneNumber;
@@ -21,16 +23,19 @@ import gov.cdc.usds.simplereport.db.repository.PhoneNumberRepository;
 import gov.cdc.usds.simplereport.service.email.EmailProviderTemplate;
 import gov.cdc.usds.simplereport.service.email.EmailService;
 import gov.cdc.usds.simplereport.test_util.SliceTestConfiguration;
+import gov.cdc.usds.simplereport.validators.CsvValidatorUtils;
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.time.LocalDate;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -72,7 +77,7 @@ class PatientBulkUploadServiceAsyncTest extends BaseAuthenticatedFullStackTest {
     List<UUID> facilityIds =
         _orgService.getFacilities(_orgService.getCurrentOrganization()).stream()
             .map(Facility::getInternalId)
-            .collect(Collectors.toList());
+            .toList();
     if (facilityIds.isEmpty()) {
       throw new IllegalStateException("This organization has no facilities");
     }
@@ -114,6 +119,96 @@ class PatientBulkUploadServiceAsyncTest extends BaseAuthenticatedFullStackTest {
     assertThat(phoneNumber.getNumber()).isEqualTo("410-867-5309");
     assertThat(phoneNumber.getType()).isEqualTo(PhoneType.MOBILE);
     assertThat(patient.getEmail()).isEqualTo("jane@testingorg.com");
+
+    verify(_emailService, times(1))
+        .sendWithDynamicTemplate(
+            List.of("bobbity@example.com"),
+            EmailProviderTemplate.SIMPLE_REPORT_PATIENT_UPLOAD,
+            Map.of("patients_url", "https://simplereport.gov/patients?facility=null"));
+  }
+
+  @Test
+  void validPersonWithRequiredOnlyFields_savedToDatabase()
+      throws IOException, ExecutionException, InterruptedException {
+    // GIVEN
+    InputStream inputStream = loadCsv("patientBulkUpload/validRequiredOnly.csv");
+    byte[] content = inputStream.readAllBytes();
+
+    // WHEN
+    CompletableFuture<Set<Person>> futureSavedPatients = this._service.savePatients(content, null);
+    Set<Person> savedPatients = futureSavedPatients.get();
+
+    // THEN
+    assertThat(savedPatients).hasSameSizeAs(fetchDatabasePatients());
+    assertThat(fetchDatabasePatientsForFacility(firstFacilityId))
+        .hasSameSizeAs(fetchDatabasePatientsForFacility(secondFacilityId));
+    assertThat(fetchDatabasePatients()).hasSize(1);
+
+    Person patient = fetchDatabasePatients().get(0);
+
+    assertThat(patient.getLastName()).isEqualTo("Doe");
+    assertThat(patient.getRace()).isEqualTo("black");
+    assertThat(patient.getEthnicity()).isEqualTo("not_hispanic");
+    assertThat(patient.getBirthDate()).isEqualTo(LocalDate.of(1990, 1, 1));
+    assertThat(patient.getGender()).isEqualTo("female");
+
+    assertThat(patient.getCountry()).isEqualTo("USA");
+
+    List<PhoneNumber> phoneNumbers =
+        phoneNumberRepository.findAllByPersonInternalId(patient.getInternalId());
+    assertThat(phoneNumbers).hasSize(1);
+    PhoneNumber phoneNumber = phoneNumbers.get(0);
+    assertThat(phoneNumber.getNumber()).isEqualTo("410-867-5309");
+    assertThat(phoneNumber.getType()).isEqualTo(PhoneType.MOBILE);
+
+    verify(_emailService, times(1))
+        .sendWithDynamicTemplate(
+            List.of("bobbity@example.com"),
+            EmailProviderTemplate.SIMPLE_REPORT_PATIENT_UPLOAD,
+            Map.of("patients_url", "https://simplereport.gov/patients?facility=null"));
+
+    final MappingIterator<Map<String, String>> valueIterator =
+        CsvValidatorUtils.getIteratorForCsv(new ByteArrayInputStream(content));
+    assertThat(valueIterator.next().keySet())
+        .isEqualTo(
+            new HashSet<>((new PatientUploadRow(Collections.emptyMap())).getRequiredFields()));
+  }
+
+  @Test
+  void validPersonWithEmptyOptional_savedToDatabase()
+      throws IOException, ExecutionException, InterruptedException {
+    // GIVEN
+    InputStream inputStream = loadCsv("patientBulkUpload/validEmptyOptionalValues.csv");
+    byte[] content = inputStream.readAllBytes();
+
+    // WHEN
+    CompletableFuture<Set<Person>> futureSavedPatients = this._service.savePatients(content, null);
+    Set<Person> savedPatients = futureSavedPatients.get();
+
+    // THEN
+    assertThat(savedPatients).hasSameSizeAs(fetchDatabasePatients());
+    assertThat(fetchDatabasePatientsForFacility(firstFacilityId))
+        .hasSameSizeAs(fetchDatabasePatientsForFacility(secondFacilityId));
+    assertThat(fetchDatabasePatients()).hasSize(1);
+
+    Person patient = fetchDatabasePatients().get(0);
+
+    assertThat(patient.getLastName()).isEqualTo("Kuphal");
+    assertThat(patient.getFirstName()).isEqualTo("Lucienne");
+    assertThat(patient.getRace()).isEqualTo("black");
+    assertThat(patient.getBirthDate()).isEqualTo(LocalDate.of(1986, 3, 12));
+    assertThat(patient.getGender()).isEqualTo("female");
+    assertThat(patient.getEthnicity()).isEqualTo("hispanic");
+    assertThat(patient.getCountry()).isEqualTo("USA");
+    assertThat(patient.getEmployedInHealthcare()).isFalse();
+    assertThat(patient.getResidentCongregateSetting()).isFalse();
+
+    List<PhoneNumber> phoneNumbers =
+        phoneNumberRepository.findAllByPersonInternalId(patient.getInternalId());
+    assertThat(phoneNumbers).hasSize(1);
+    PhoneNumber phoneNumber = phoneNumbers.get(0);
+    assertThat(phoneNumber.getNumber()).isEqualTo("410-675-4559");
+    assertThat(phoneNumber.getType()).isEqualTo(PhoneType.MOBILE);
 
     verify(_emailService, times(1))
         .sendWithDynamicTemplate(
